--- a/register.html
+++ b/register.html
@@ -8,19 +8,19 @@
 <body>
 
 <nav>
-  <a href="index.html" class="btn ghost">← Back</a>
+  <a href="index.html" class="btn ghost">← Back to Home</a>
 </nav>
 
 <section class="section">
   <h1>Workshop Registration</h1>
-  <p>Please fill in the form below to register.</p>
+  <p>Please complete the form below to confirm your participation.</p>
 
-  <iframe
-    src="PASTE_GOOGLE_FORM_EMBED_LINK_HERE"
-    width="100%"
-    height="900"
-    frameborder="0">
-  </iframe>
+  <div style="display:flex; justify-content:center;">
+    <iframe
+      src="https://docs.google.com/forms/d/e/1FAIpQLSeS94vKfjDWbtvkbcptKdKW5PMV1XbKakWk_JhNiNhuaRlUdg/viewform?embedded=true"
+      style="width:100%; max-width:900px; height:1200px; border:none;">
+    </iframe>
+  </div>
 </section>
 
 </body>
