--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>WE-ICT 2014 | BUET</title>
+  <title>WE-ICT 2026 | BUET</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <nav>
-  <div class="logo">WE-ICT 2014</div>
+  <div class="logo">WE-ICT 2026</div>
   <div>
-    <a href="assets/flyer.pdf" target="_blank" class="btn ghost">Flyer</a>
     <a href="register.html" class="btn">Register</a>
   </div>
 </nav>
@@ -18,28 +17,81 @@
 <section class="hero">
   <h1>Workshop on Women Empowerment through ICT</h1>
   <p>Higher Studies • Research • Career</p>
-  <p class="meta">June 7, 2014 · BUET, Dhaka</p>
+  <p class="meta">February 24, 2026 · BUET, Dhaka</p>
   <a href="register.html" class="btn big">Register Now</a>
 </section>
 
 <section class="section">
   <h2>About the Workshop</h2>
   <p>
-    WE-ICT 2014 aims to provide a forum for researchers, faculty members,
-    industry professionals, and students to exchange ideas and experiences
-    that encourage and motivate Bangladeshi women in computing.
+    The Workshop on Women Empowerment through 
+ICT: Higher Studies, Research and Career 2026 
+(WE-ICT 2026) aims at providing a forum for 
+researchers, faculty members, industry 
+professionals, and students to exchange ideas, 
+experience, and success stories to encourage, 
+support, connect and motivate Bangladeshi women 
+in computing. The WE-ICT 2026 will be held in 
+Dhaka, Bangladesh, February 24, 2026, organized under 
+the subproject CP#2082: Enhancement of Graduates 
+Studies Facilities for the Department of CSE, BUET 
+of Higher Education Quality Enhancement Project 
+(HEQEP). This workshop features keynote speech, 
+invited talks, and poster presentations.
   </p>
 </section>
 
 <section class="cards">
   <div class="card">
-    <h3>🎤 Talks</h3>
-    <p>Keynote & invited talks from national and international experts.</p>
+    <h3>🎤 KEYNOTE SPEECH</h3>
+    <p>Towards Higher Studies, Research and 
+Academic Career: Challenges and 
+Opportunities 
+Dr. Mahmuda Naznin (Associate Professor, CSE, 
+BUET) 
+ 
+Developing Research Career in Computing 
+Dr. Shamsi Tamara Iqbal (Microsoft Research, 
+USA) 
+ 
+Higher Studies in Abroad:  
+Guideline and Advice  
+Sumaiya Nazeen (International Fulbright S&T 
+Fellow at MIT, USA) </p>
   </div>
+  
   <div class="card">
-    <h3>🖼 Posters</h3>
-    <p>Poster session showcasing research ideas and ongoing work.</p>
+    <h3>🖼 CALL FOR POSTERS</h3>
+    <p>We invite authors to submit 2 page extended abstract 
+on novel research ideas or results related to the 
+application of ICT for the empowerment of women 
+in different sectors that includes, but not limited to 
+the following: 
+• Eradicating Poverty 
+• Protecting from Domestic Violence 
+• Combating Street Harassment 
+• Empowering Women in Workplaces 
+• Disseminating of Information on Women   
+Health and Education 
+• Strengthening Women in Self Employment 
+• Bridging Digital Divide in Accessing 
+Technology 
+The poster session aims to provide an opportunity to 
+present and have an informal discussion of one’s 
+research with the participants of the workshop. Best 
+three posters will be awarded. Posters of already 
+accepted papers at other conferences can be also 
+submitted at WE-ICT. In addition, Ideas and results 
+presented at WE-ICT may be published in other 
+conferences with formal proceedings and/or in 
+journals.  Submission  guidelines  and   template  are 
+available at (
+      <a href="http://buet.ac.bd/cse/HEQEP/workshop/WE-ICT/ 
+Submission">http://buet.ac.bd/cse/HEQEP/workshop/WE-ICT/ 
+Submission</a> )
+ </p>
   </div>
+  
   <div class="card">
     <h3>🏆 Awards</h3>
     <p>Best poster awards and recognition.</p>
@@ -49,8 +101,13 @@
 <section class="section light">
   <h2>Venue</h2>
   <p>
-    Graduate Complex, Department of CSE<br>
-    Bangladesh University of Engineering and Technology (BUET), Dhaka
+The WE-ICT 2026 will be held in Dhaka, 
+Bangladesh, February 24, 2026. Dhaka is the capital city 
+of Bangladesh, a beautiful South-Asian country. The 
+workshop will be organized by the Department of 
+Computer Science and Engineering, Bangladesh 
+University of Engineering and Technology (BUET) 
+at Graduate Complex. 
   </p>
 </section>
 
@@ -58,7 +115,7 @@
   <h2>Registration</h2>
   <p>
     Registration is <strong>free</strong>. Interested participants must
-    complete online registration by <strong>June 1, 2014</strong>.
+    complete online registration by <strong>June 1, 2026</strong>.
   </p>
   <a href="register.html" class="btn">Go to Registration</a>
 </section>
