--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </div>
 </nav>
 
-<section class="hero">
+<section class="hero2">
   <h1>Workshop on Women Empowerment through ICT</h1>
   <p>Higher Studies • Research • Career</p>
   <p class="meta">February 24, 2026 · BUET, Dhaka</p>
