--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <nav>
-  <div class="logo">WE-ICT 2026</div>
+  <div class="logo1">WE-ICT 2026</div>
   <div>
     <a href="register.html" class="btn">Register</a>
   </div>
