--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>WE-ICT 2026 | BUET</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,74 +25,32 @@
 <section class="section">
   <h2>About the Workshop</h2>
   <p>
-    The Workshop on Women Empowerment through 
-ICT: Higher Studies, Research and Career 2026 
-(WE-ICT 2026) aims at providing a forum for 
-researchers, faculty members, industry 
-professionals, and students to exchange ideas, 
-experience, and success stories to encourage, 
-support, connect and motivate Bangladeshi women 
-in computing. The WE-ICT 2026 will be held in 
-Dhaka, Bangladesh, February 24, 2026, organized under 
-the subproject CP#2082: Enhancement of Graduates 
-Studies Facilities for the Department of CSE, BUET 
-of Higher Education Quality Enhancement Project 
-(HEQEP). This workshop features keynote speech, 
-invited talks, and poster presentations.
+    The Workshop on Women Empowerment through ICT:
+    Higher Studies, Research and Career 2026 (WE-ICT 2026)
+    aims to provide a forum for researchers, faculty members,
+    industry professionals, and students to exchange ideas,
+    experiences, and success stories to encourage and motivate
+    Bangladeshi women in computing.
   </p>
 </section>
 
 <section class="cards">
   <div class="card">
-    <h3>🎤 KEYNOTE SPEECH</h3>
-    <p>Towards Higher Studies, Research and 
-Academic Career: Challenges and 
-Opportunities 
-Dr. Mahmuda Naznin (Associate Professor, CSE, 
-BUET) 
- 
-Developing Research Career in Computing 
-Dr. Shamsi Tamara Iqbal (Microsoft Research, 
-USA) 
- 
-Higher Studies in Abroad:  
-Guideline and Advice  
-Sumaiya Nazeen (International Fulbright S&T 
-Fellow at MIT, USA) </p>
+    <h3>🎤 Keynote & Talks</h3>
+    <p>
+      Talks on higher studies, research careers, and academic
+      opportunities by national and international experts.
+    </p>
   </div>
-  
+
   <div class="card">
-    <h3>🖼 CALL FOR POSTERS</h3>
-    <p>We invite authors to submit 2 page extended abstract 
-on novel research ideas or results related to the 
-application of ICT for the empowerment of women 
-in different sectors that includes, but not limited to 
-the following: 
-• Eradicating Poverty 
-• Protecting from Domestic Violence 
-• Combating Street Harassment 
-• Empowering Women in Workplaces 
-• Disseminating of Information on Women   
-Health and Education 
-• Strengthening Women in Self Employment 
-• Bridging Digital Divide in Accessing 
-Technology 
-The poster session aims to provide an opportunity to 
-present and have an informal discussion of one’s 
-research with the participants of the workshop. Best 
-three posters will be awarded. Posters of already 
-accepted papers at other conferences can be also 
-submitted at WE-ICT. In addition, Ideas and results 
-presented at WE-ICT may be published in other 
-conferences with formal proceedings and/or in 
-journals.  Submission  guidelines  and   template  are 
-available at (
-      <a href="http://buet.ac.bd/cse/HEQEP/workshop/WE-ICT/ 
-Submission">http://buet.ac.bd/cse/HEQEP/workshop/WE-ICT/ 
-Submission</a> )
- </p>
+    <h3>🖼 Call for Posters</h3>
+    <p>
+      Poster presentations on ICT-based solutions for women
+      empowerment. Best posters will be awarded.
+    </p>
   </div>
-  
+
   <div class="card">
     <h3>🏆 Awards</h3>
     <p>Best poster awards and recognition.</p>
@@ -101,13 +60,8 @@ Submission</a> )
 <section class="section light">
   <h2>Venue</h2>
   <p>
-The WE-ICT 2026 will be held in Dhaka, 
-Bangladesh, February 24, 2026. Dhaka is the capital city 
-of Bangladesh, a beautiful South-Asian country. The 
-workshop will be organized by the Department of 
-Computer Science and Engineering, Bangladesh 
-University of Engineering and Technology (BUET) 
-at Graduate Complex. 
+    Graduate Complex, Department of CSE<br>
+    Bangladesh University of Engineering and Technology (BUET), Dhaka
   </p>
 </section>
 
