--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
   <p>
     The Workshop on Women Empowerment through ICT:
     Higher Studies, Research and Career 2026 (WE-ICT 2026)
-    aims to provide a forum for researchers, faculty members,
+    aims at providing a forum for researchers, faculty members,
     industry professionals, and students to exchange ideas,
-    experiences, and success stories to encourage and motivate
-    Bangladeshi women in computing.
+    experiences, and success stories to encourage, support,
+    connect and motivate Bangladeshi women in computing.
   </p>
 </section>
 
@@ -38,7 +38,7 @@
   <div class="card">
     <h3>🎤 Keynote & Talks</h3>
     <p>
-      Talks on higher studies, research careers, and academic
+      Sessions on higher studies, research careers, and academic
       opportunities by national and international experts.
     </p>
   </div>
@@ -77,7 +77,8 @@
 <footer>
   <p>
     Organized by Department of CSE, BUET<br>
-    Contact: <a href="mailto:tanzimahashem@gmail.com">tanzimahashem@gmail.com</a>
+    Contact:
+    <a href="mailto:tanzimahashem@gmail.com">tanzimahashem@gmail.com</a>
   </p>
 </footer>
 
