--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
 
 <nav>
   <div class="logo1">WE-ICT 2026</div>
-  <div>
-    <a href="register.html" class="btn">Register</a>
-  </div>
+  <a href="register.html" class="btn">Register</a>
 </nav>
 
-<section class="hero2">
-  <h1>Workshop on Women Empowerment through ICT</h1>
-  <p>Higher Studies • Research • Career</p>
-  <p class="meta">February 24, 2026 · BUET, Dhaka</p>
-  <a href="register.html" class="btn big">Register Now</a>
+<!-- HERO WITH FULL IMAGE BANNER -->
+<section class="hero">
+  <div class="hero-bg">
+    <img src="assets/logo.jpeg" alt="WE-ICT Banner">
+  </div>
+
+  <div class="hero-content">
+    <h1>Workshop on Women Empowerment through ICT</h1>
+    <p>Higher Studies • Research • Career</p>
+    <p class="meta">February 24, 2026 · BUET, Dhaka</p>
+    <a href="register.html" class="btn big">Register Now</a>
+  </div>
 </section>
 
 <section class="section">
