--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <a href="register.html" class="btn">Register</a>
 </nav>
 
-<!-- HERO WITH FULL IMAGE BANNER -->
+<!-- HERO IMAGE BANNER -->
 <section class="hero">
-  <div class="hero-bg">
-    <img src="assets/logo.jpeg" alt="WE-ICT Banner">
-  </div>
+  <img class="hero-image" src="assets/logo.jpeg" alt="WE-ICT Banner">
+
+  <div class="hero-overlay"></div>
 
   <div class="hero-content">
     <h1>Workshop on Women Empowerment through ICT</h1>
@@ -32,51 +32,25 @@
   <p>
     The Workshop on Women Empowerment through ICT:
     Higher Studies, Research and Career 2026 (WE-ICT 2026)
-    aims at providing a forum for researchers, faculty members,
-    industry professionals, and students to exchange ideas,
-    experiences, and success stories to encourage, support,
-    connect and motivate Bangladeshi women in computing.
+    aims to encourage, support, connect and motivate
+    Bangladeshi women in computing through talks,
+    posters and networking.
   </p>
 </section>
 
 <section class="cards">
   <div class="card">
-    <h3>🎤 Keynote & Talks</h3>
-    <p>
-      Sessions on higher studies, research careers, and academic
-      opportunities by national and international experts.
-    </p>
+    <h3>🎤 Keynotes</h3>
+    <p>Inspirational talks on higher studies and research careers.</p>
   </div>
-
   <div class="card">
-    <h3>🖼 Call for Posters</h3>
-    <p>
-      Poster presentations on ICT-based solutions for women
-      empowerment. Best posters will be awarded.
-    </p>
+    <h3>🖼 Posters</h3>
+    <p>Poster presentations on ICT-based women empowerment.</p>
   </div>
-
   <div class="card">
     <h3>🏆 Awards</h3>
     <p>Best poster awards and recognition.</p>
   </div>
-</section>
-
-<section class="section light">
-  <h2>Venue</h2>
-  <p>
-    Graduate Complex, Department of CSE<br>
-    Bangladesh University of Engineering and Technology (BUET), Dhaka
-  </p>
-</section>
-
-<section class="section">
-  <h2>Registration</h2>
-  <p>
-    Registration is <strong>free</strong>. Interested participants must
-    complete online registration by <strong>June 1, 2026</strong>.
-  </p>
-  <a href="register.html" class="btn">Go to Registration</a>
 </section>
 
 <footer>
