--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
   <a href="register.html" class="btn">Register</a>
 </nav>
 
-<!-- HERO IMAGE BANNER -->
+<!-- HERO BANNER -->
 <section class="hero">
-  <img class="hero-image" src="assets/logo.jpeg" alt="WE-ICT Banner">
+  <img src="assets/logo.jpeg" alt="WE-ICT Banner" class="hero-image">
 
-  <div class="hero-overlay"></div>
-
-  <div class="hero-content">
+  <div class="hero-content glass animate">
     <h1>Workshop on Women Empowerment through ICT</h1>
     <p>Higher Studies • Research • Career</p>
     <p class="meta">February 24, 2026 · BUET, Dhaka</p>
@@ -27,30 +25,50 @@
   </div>
 </section>
 
-<section class="section">
+<!-- ABOUT -->
+<section class="section animate">
   <h2>About the Workshop</h2>
   <p>
-    The Workshop on Women Empowerment through ICT:
-    Higher Studies, Research and Career 2026 (WE-ICT 2026)
-    aims to encourage, support, connect and motivate
-    Bangladeshi women in computing through talks,
-    posters and networking.
+    WE-ICT 2026 aims to provide a platform for researchers, faculty,
+    industry professionals, and students to exchange ideas and
+    experiences that encourage and empower Bangladeshi women in
+    computing.
   </p>
 </section>
 
-<section class="cards">
-  <div class="card">
-    <h3>🎤 Keynotes</h3>
-    <p>Inspirational talks on higher studies and research careers.</p>
+<!-- SPEAKERS -->
+<section class="section light">
+  <h2 class="center animate">Invited Speakers</h2>
+
+  <div class="speakers">
+    <div class="speaker-card animate">
+      <img src="assets/logo.jpeg" alt="Speaker">
+      <h3>Dr. Mahmuda Naznin</h3>
+      <p>Associate Professor, CSE, BUET</p>
+    </div>
+
+    <div class="speaker-card animate">
+      <img src="assets/logo.jpeg" alt="Speaker">
+      <h3>Dr. Shamsi Tamara Iqbal</h3>
+      <p>Microsoft Research, USA</p>
+    </div>
+
+    <div class="speaker-card animate">
+      <img src="assets/logo.jpeg" alt="Speaker">
+      <h3>Sumaiya Nazeen</h3>
+      <p>Fulbright Fellow, MIT, USA</p>
+    </div>
   </div>
-  <div class="card">
-    <h3>🖼 Posters</h3>
-    <p>Poster presentations on ICT-based women empowerment.</p>
-  </div>
-  <div class="card">
-    <h3>🏆 Awards</h3>
-    <p>Best poster awards and recognition.</p>
-  </div>
+</section>
+
+<!-- REGISTRATION -->
+<section class="section animate">
+  <h2>Registration</h2>
+  <p>
+    Registration is <strong>free</strong>. Please complete the online
+    registration by <strong>June 1, 2026</strong>.
+  </p>
+  <a href="register.html" class="btn">Go to Registration</a>
 </section>
 
 <footer>
